--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-/Assembly-CSharp.csproj
-/Assembly-CSharp-Editor.csproj
-/Assembly-CSharp-Editor-firstpass.csproj
-/Assembly-CSharp-Editor-firstpass-vs.csproj
-/Assembly-CSharp-Editor-vs.csproj
-/Assembly-CSharp-firstpass.csproj
-/Assembly-CSharp-firstpass-vs.csproj
-/Assembly-CSharp-vs.csproj
-/Assembly-UnityScript.unityproj
-/Assembly-UnityScript-vs.unityproj
 /TowerDefencePrototype.sln
 /TowerDefencePrototype-csharp.sln
 /TowerDefencePrototype-csharp.sln.DotSettings.user
 /TowerDefencePrototype-csharp.suo
+/Library
 obj
-Library
 /Build
 /Temp
