Removed C# project files from git

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@
 obj
 /Build
 /Temp
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
+/*.csproj
